fixed read more spacing after posts

--- a/_sass/2-layouts/post.sass
+++ b/_sass/2-layouts/post.sass
@@ -80,8 +80,10 @@ h5.readMoreCTA
   justify-content: space-around
   align-items: center
   flex-wrap: wrap
+  .blogPostContainer
+    margin: 0 5px 0 5px
   @media screen and(max-width: 700px)
     padding: 0
     .blogPostContainer
       max-width: 100%
-      margin: 0 0px 120px 0px
+      margin: 0 0px 0 0px
